--- a/src/main/java/GUI/StudentGradeDetails.form
+++ b/src/main/java/GUI/StudentGradeDetails.form
@@ -106,6 +106,9 @@
         <Property name="text" type="java.lang.String" value="EXIT"/>
         <Property name="name" type="java.lang.String" value="ExitBtn" noResource="true"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton3MouseClicked"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
