--- a/src/main/java/GUI/StudentGradeMainForm.form
+++ b/src/main/java/GUI/StudentGradeMainForm.form
@@ -208,6 +208,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Refresh"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
