--- a/src/main/java/GUI/CourseInstructorDetails.form
+++ b/src/main/java/GUI/CourseInstructorDetails.form
@@ -135,6 +135,9 @@
             <Property name="text" type="java.lang.String" value="EXIT"/>
             <Property name="name" type="java.lang.String" value="ExitBtn" noResource="true"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel2">
           <Properties>
